--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # 공통
 node_modules/
+dist/
 .env
 .env.local
 .env.*.local
@@ -13,3 +14,12 @@ Thumbs.db
 
 # VSCode
 .vscode/
+
+# 로그 및 빌드
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+turbo/
+
+# IDE
+.idea/
